--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html, body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: 'Geist', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -28,8 +32,4 @@ code {
   src: url('../public/fonts/LastikFamily-Bold.otf') format('opentype');
   font-weight: 700;
   font-style: normal;
-}
-
-body {
-  font-family: 'Geist', sans-serif;
 }
