--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   font-family: 'Geist', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #FAF7F2;
 }
 
 code {
@@ -37,7 +38,7 @@ code {
 
 @font-face {
   font-family: 'Lastik';
-  src: url('../public/fonts/LastikFamily-Bold.otf') format('opentype');
-  font-weight: 700;
+  src: url('../public/fonts/LastikFamily-SemiBold.otf') format('opentype');
+  font-weight: 600;
   font-style: normal;
 }
